--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorDivider">#FFFFFFFF</color>
-    <color name="primaryColor">#DE7F00</color>
-    <color name="black">#FFFFFFFF</color>
-    <color name="white">#1F202B</color>
-    <color name="black_200">#FFFFFFFF</color>
+    <color name="colorDivider">#E98801</color>
+    <color name="primaryColor">#E98801</color>
+    <color name="black">#FF000000</color>
+    <color name="white">#FFFFFFFF</color>
+    <color name="black_200">#333333</color>
     <color name="purple_500">#6200EE</color>
     <color name="purple_700">#3700B3</color>
     <color name="teal_200">#03DAC5</color>
